fixes magnifying glass alignment on address view in firefox

--- a/src/sass/address-view.sass
+++ b/src/sass/address-view.sass
@@ -9,6 +9,9 @@
     overflow-x: hidden
     overflow-y: auto
 
+    #address-input 
+      height: 46px
+
     .address-info
       height: 100%
       border-bottom: 0
